# powersoftau

./: .gitignore  Cargo.toml
src/: accumulator.rs  batched_accumulator.rs  keypair.rs  lib.rs  parameters.rs  utils.rs
src/small_bls12_381/: mod.rs
